@@ -1,5 +1,6 @@
 Changes in Release 1.2.0
 =============================================
+[XSTJ-31] - add ECDSA elliptic curve signature support
 [XSTJ-27] - compatibility with Apache Santuario 1.5.x
 [XSTJ-24] - should not use xmlsec IdResolver class
 [XSTJ-22] - non-zero exit codes from shell script
